@@ -292,11 +292,29 @@
 	define("ZBX_NODE_LOCAL",	1);
 	define("ZBX_NODE_MASTER",	2);
 
+	define("BR",	"<br/>\n");
+	define("SPACE",	"&nbsp;");
+	define("RARR",	"&rArr;");
+
+	global $_GET, $_POST, $_COOKIE, $_REQUEST;
+
 /* Support for PHP5. PHP5 does not have $HTTP_..._VARS */
 	if (!function_exists('version_compare'))
 	{
-		$_REQUEST = $HTTP_GET_VARS;
-		$_POST = $HTTP_POST_VARS;
-		$_COOKIE = $HTTP_COOKIE_VARS;
+		$_GET		= $HTTP_GET_VARS;
+		$_POST		= $HTTP_POST_VARS;
+		$_COOKIE	= $HTTP_COOKIE_VARS;
 	}
+
+/* if magic quotes on then get rid of them */
+	if (get_magic_quotes_gpc()) {
+		$_GET    = zbx_stripslashes($_GET);
+		$_POST	 = zbx_stripslashes($_POST);
+		$_COOKIE = zbx_stripslashes($_COOKIE);
+	}
+
+/* init $_REQUEST */
+	ini_set('variables_order', 'GP');
+	$_REQUEST = $_POST + $_GET;
+
 ?>
