@@ -19,10 +19,6 @@
 **/
 ?>
 <?php
-	define("BR","<br/>\n");
-	define("SPACE","&nbsp;");
-	define("RARR","&rArr;");
-
 	function	bold($str)
 	{
 		if(is_array($str)){
